<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IEEE_AE</string>
    <string name="hello_world">Hello world!</string>
    <string name="go_cats">Go \'Cats!</string>
    <string name="action_settings">Settings</string>
    <string name="number_display">0</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="settings_title_change_num">Change Number</string>

</resources>
